<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundcolor">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/construtiveis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/life_pod" />

    <Button
        android:id="@+id/construtiveis3"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botaomapa"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/construtiveis4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/construtiveis2"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botaoconstrutiveis"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/construtiveis3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/construtiveis4"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botaofauna"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/construtiveis5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/construtiveis5"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botaoflora"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/construtiveis6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/construtiveis6"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/botaoleviata"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>