<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leviata"
    android:background="@color/backgroundcolor">

    <Button
        android:id="@+id/maisconstroi4"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="72dp"
        android:text="@string/maisinformacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/voltar5"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="354dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/leviata"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="252dp"
        android:layout_height="154dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/reaper" />
</androidx.constraintlayout.widget.ConstraintLayout>