<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cronstrucoes"
    android:background="@color/backgroundcolor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="373dp"
        android:layout_height="316dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/construtivel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="12dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/maisconstroi"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="68dp"
        android:text="@string/maisinformacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="319dp"
        android:layout_height="297dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/base3" />
</androidx.constraintlayout.widget.ConstraintLayout>