<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fauna"
    android:background="@color/backgroundcolor">

    <Button
        android:id="@+id/maisconstroi2"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="68dp"
        android:text="@string/maisinformacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/voltar4"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="388dp"
        android:layout_height="314dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/fauna"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="246dp"
        android:layout_height="323dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/peper" />
</androidx.constraintlayout.widget.ConstraintLayout>